<resources>
    <string name="app_name">PokemonMealtimeMasters</string>
    <string name="title">Pokémon Mealtime Masters</string>
    <string name="add_meal">Add Meal</string>
    <string name="meal_name">Meal Name</string>
    <string name="calories_0">Calories: 0</string>
    <string name="time">Time</string>
    <string name="nutrition_info">Nutrition Info</string>
    <string name="servings">Servings</string>
    <string name="calories">Calories</string>
    <string name="protein_g">Protein (g)</string>
    <string name="carbs">Carbs</string>
    <string name="vitamins">Vitamins</string>
    <string name="settings">Settings</string>
    <string name="reset_today">reset_today</string>
    <string name="vitamins_prompt" />
    <string name="log_a_meal">Log a Meal</string>
    <string name="search">Search</string>
    <string name="search_for_a_meal">Search for a meal</string>
    <string name="custom_food">Custom Food</string>
    <string name="other_food_options">Other Food Options</string>
    <string name="most_recent">Most Recent</string>
    <string name="carbs_g">Carbs (g)</string>
    <string name="pokemon_icon">Pokémon Icon</string>
    <string name="nutritional_information">Nutritional Information</string>
    <string name="protein">Protein</string>
    <string name="fats">Fats</string>
    <string name="ok">OK</string>
    <string name="reward_title">You earned a new Pokémon!</string>
    <string name="pokemon_sprite" />
    <string name="pokedex">Pokédex</string>
    <string name="my_pokedex">My Pokédex</string>
    <string name="reward_caught_format">You caught %1$s!</string>
    <string name="badges">Badges</string>
    <string name="my_badges">My Badges</string>
    <string name="badge_locked">Badge not earned yet!</string>
    <string name="badge_awarded_on">Awarded: %1$s</string>
    <string name="total_sugars_g">Total Sugars (g)</string>
    <string name="nutrition_details">Nutrition Details</string>
    <string name="calories_kcal">Calories</string>
    <string name="custom_meal_name">Custom Meal</string>
    <string name="calories_label">Calories</string>
    <string name="protein_label">Protein</string>
    <string name="total_sugars_label">Total Sugars</string>
    <string name="nutrient_sources_title">%1$s Sources</string>
    <string name="unit_kcal">kcal</string>
    <string name="unit_gram">g</string>
    <string name="nutrient_total_format">Total: %1$d %2$s</string> <!-- %1$d = value, %2$s = unit -->
    <string name="no_contribution_data">No meals with this nutrient logged yet today.</string>
    <string name="legend_item_format">%1$s - %2$d %3$s (%4$d%%)</string> <!-- name, value, unit, percentage -->
    <string name="close">Close</string>
    <string name="vitamin_checkbox_label">Took Vitamin Today?</string>
    <string name="daily_progress_title">Today You\'ve Eaten</string>
    <string name="content_desc_pokemon_partner">Current Pokémon partner</string>
    <string name="log_meal">Log Meal</string>
    <string name="todays_logged_meals">Today\'s Meals</string>
    <string name="custom_meal_entry">Custom Meal Entry</string>
    <string name="error_positive_servings">Servings must be greater than zero.</string>
    <string name="error_invalid_numbers">Please enter valid numbers.</string>
    <string name="error_enter_nutrition_details">Please enter some nutrition details.</string>
    <string name="tip1">Tip: High-protein meals may attract Fighting-type Pokémon!</string>
    <string name="tip2">Tip: Balanced meals might reward you with rare Pokémon!</string>
    <string name="tip3">Tip: Log meals consistently to earn streak badges!</string>
    <string name="tip4">Tip: Explore the Pokédex to see all the Pokémon you can collect!</string>
    <string name="error_network">Network error. Please try again.</string>
    <string name="nutrient_breakdown_title">Nutrient Breakdown</string>
    <string name="content_desc_educational_tip_icon">Educational tip icon</string>
    <string name="tip_calories_low">Eating gives you energy to play! Let\'s find some more yummy fuel.</string>
    <string name="tip_calories_good">Great energy level! You\'re fueling up like a champ!</string>
    <string name="tip_calories_high">Wow, lots of energy! Ready for big adventures!</string>
    <string name="tip_protein_low">Protein helps build strong muscles! Look for foods like chicken, beans, or eggs.</string>
    <string name="tip_protein_good">Awesome protein power! You\'re building strong muscles!</string>
    <string name="tip_protein_very_high">Super muscle fuel! You\'re getting really strong!</string>
    <string name="tip_sugars_good">Great job keeping sugars in check!</string>
    <string name="tip_sugars_moderate">Sweets are tasty treats! Remember fruits have natural sugars too.</string>
    <string name="tip_sugars_high">Whoa, that\'s a lot of sugar! Sweet treats are best in small amounts.</string>
    <string name="search_food_hint">Search for a food…</string>
    <string name="add_custom_food">Add Custom Food Entry</string>
    <string name="log_this_meal">Log This Meal</string>
</resources>